feat: adding feature user
